--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,6 +2,7 @@ site_name: Grassroots Users Documentation
   
 theme:
   name: material
+  custom_dir: overrides
   logo: assets/logo-white.png
   palette:
     - scheme: grassroots
@@ -15,7 +16,9 @@ theme:
       toggle:
         icon: material/toggle-switch
         name: Switch to light mode
-  
+  features:
+    - navigation.sections
+    
     
     
 
