--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -45,8 +45,11 @@ nav:
         - Submitting trials:     field_trial/submit_trial.md
         - Submitting studies:   field_trial/submit_study.md
         - Submitting plots:     field_trial/submit_plots.md
-      - Searching Options:
-        - Field trials Search Portal:   field_trial/search_portal.md
+      - Searching & Visualising Data:
+        - Main Field trails Portal:  field_trial/fieldtrials_general_table.md
+        - Field trail study:       field_trial/fieldtrials_study_table.md
+
+        - Field trials Search Portal:   field_trial/search_portal.md        
         - Measured Phenotype variables: field_trial/search_measured_variables.md
         - Treatments:                   field_trial/search_treatments.md
       - Download Data: field_trial/download_study_fd.md 
