Test section from developers docs and new page for test database

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -63,4 +63,8 @@ nav:
  
   - BLAST Service:
       - Introduction:         BLAST/index.md      
- 
+  - ' ': ' '
+  - ' ': ' '
+  - INSTALLATION (Developers):
+      - 'Building grassroots core':   installation/readme.md
+      - 'Sample database':            installation/getting_started.md
