Update documentation and add new screenshots to the mobile app section

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -71,4 +71,5 @@ nav:
   - ' ': ' '
   - ' ': ' '
   - Mobile App (beta version):
-    - QR Scanner: mobile_app/index.md
+    - General Browsing: mobile_app/index.md
+    - QR Scanner: mobile_app/QR.md
