Update base URL for new location of static files

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -19,7 +19,7 @@ theme:
   features:
     - navigation.sections
 extra:
-    homepage: https://grassroots.tools/newdocs
+    homepage: https://grassroots.tools/prod/documentation/
     
     
     
