Correct url links for new live server

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -19,7 +19,7 @@ theme:
   features:
     - navigation.sections
 extra:
-    homepage: https://grassroots.tools/prod/documentation/
+    homepage: https://grassroots.tools/documentation/
     
     
     
