--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,6 @@
 site_name: Grassroots Users Documentation
 site_url: https://grassroots.tools
+docs_dir: docs
 theme:
   name:  material
   custom_dir: overrides
@@ -41,39 +42,39 @@ use_directory_urls: false
 nav:
   - Home: index.md
   - Field Trials:
-      - Introduction:         docs/services/field_trial/index.md
+      - Introduction:         services/field_trial/index.md
       - Submitting Data:
-        - Obtaining an ORCID: docs/services/field_trial/orcid.md
-        - Submitting Programmes: docs/services/field_trial/submit_programme.md
-        - Submitting Trials:     docs/services/field_trial/submit_trial.md
-        - Submitting Locations:     docs/services/field_trial/submit_location.md
-        - Submitting Studies:   docs/services/field_trial/submit_study.md
-        - Submitting Plots:     docs/services/field_trial/submit_plots.md
-        - Submitting Measured Variables:     docs/services/field_trial/submit_measured_variables.md
+        - Obtaining an ORCID: services/field_trial/orcid.md
+        - Submitting Programmes: services/field_trial/submit_programme.md
+        - Submitting Trials:     services/field_trial/submit_trial.md
+        - Submitting Locations:     services/field_trial/submit_location.md
+        - Submitting Studies:   services/field_trial/submit_study.md
+        - Submitting Plots:     services/field_trial/submit_plots.md
+        - Submitting Measured Variables:     services/field_trial/submit_measured_variables.md
       
       - Searching & Visualising Data:
-        - Main Field Trials Portal:  docs/services/field_trial/fieldtrials_general_table.md
-        - Plot Data:     docs/services/field_trial/fieldtrials_study_table.md
-        - Heatmaps:     docs/services/field_trial/heatmaps.md
-        - Field Trials Search Portal:   docs/services/field_trial/search_portal.md        
-        - Measured Phenotype variables: docs/services/field_trial/search_measured_variables.md
-        - Treatments:                   docs/services/field_trial/search_treatments.md
+        - Main Field Trials Portal:  services/field_trial/fieldtrials_general_table.md
+        - Plot Data:     services/field_trial/fieldtrials_study_table.md
+        - Heatmaps:     services/field_trial/heatmaps.md
+        - Field Trials Search Portal:   services/field_trial/search_portal.md        
+        - Measured Phenotype variables: services/field_trial/search_measured_variables.md
+        - Treatments:                   services/field_trial/search_treatments.md
       - Download Data:
-        - Frictionless Data Package: docs/services/field_trial/download_study_fd.md 
-        - CSV File: docs/services/field_trial/download_study_CSV.md 
+        - Frictionless Data Package: services/field_trial/download_study_fd.md 
+        - CSV File: services/field_trial/download_study_CSV.md 
   - General Search Service:
-      - Introduction:         docs/services/general_search/index.md      
+      - Introduction:         services/general_search/index.md      
  
   - BLAST Service:
-      - Introduction:         docs/services/BLAST/index.md      
+      - Introduction:         services/blast/index.md      
   - ' ': ' '
   - ' ': ' '
   - Installation (Developers):
-      - 'Building grassroots core':   docs/services/installation/readme.md
-      - 'Sample database':            docs/services/installation/getting_started.md
+      - 'Building grassroots core':   services/installation/readme.md
+      - 'Sample database':            services/installation/getting_started.md
   - ' ': ' '
   - ' ': ' '
   - Mobile App (beta version):
-    - General Browsing & Data Submission: docs/mobile_app/index.md
-    - QR Scanner (in development): docs/mobile_app/scanning.md
+    - General Browsing & Data Submission: mobile_app/index.md
+    - QR Scanner (in development): mobile_app/scanning.md
 
